# trax

./: .gitignore  .gitmodules  README  log
configs/: bigOne.halfLocal.conf  bigOne.local.conf  bigOne.noLocal.conf  bigOne.reco.conf  events.100.test  events.1000.test  layerTriplets.xml  middleParams.test  multipleEvents.test  multipleMu.halfLocal.conf  multipleMu.local.conf  multipleMu.noLocal.conf  multipleMu.reco.conf  singleMu.sim.conf  tracks.test  ttBar.reco.conf  workGroupSize.test
plotting/: plotDPhi.py  plotHeatmap.py  plotPhysics.py  plotRuntimes.py  xkcdify.py
plotting/data/physics/: hits.ttBar.pb  physics.multipleMu.cmssw.csv  physics.multipleMu.csv  physics.qcd.csv  physics.ttBar.csv
plotting/data/physics/qcd/: eta_0.csv  eta_1.csv  eta_2.csv  eta_3.csv  eta_5.csv  pt_0.csv  pt_1.csv  pt_2.csv  pt_3.csv  pt_5.csv
plotting/data/physics/ttbar/: eta_0.csv  eta_1.csv  eta_2.csv  eta_3.csv  eta_5.csv  pt_0.csv  pt_1.csv  pt_2.csv  pt_3.csv  pt_5.csv
plotting/data/runtime/: runtime.bigOne.halfLocal.conf.tracks.test.cpu.csv  runtime.bigOne.halfLocal.conf.tracks.test.gpu.csv  runtime.bigOne.local.conf.events.100.test.cpu.csv  runtime.bigOne.local.conf.events.100.test.gpu.csv  runtime.bigOne.local.conf.events.1000.test.cpu.csv  runtime.bigOne.local.conf.events.1000.test.gpu.csv  runtime.bigOne.local.conf.tracks.test.cpu.csv  runtime.bigOne.local.conf.tracks.test.gpu.csv  runtime.bigOne.local.conf.workGroupSize.test.cpu.csv  runtime.bigOne.local.conf.workGroupSize.test.gpu.csv  runtime.bigOne.noLocal.conf.tracks.test.cpu.csv  runtime.bigOne.noLocal.conf.tracks.test.gpu.csv  runtime.multipleMu.cmssw5.csv  runtime.multipleMu.cmssw6.csv  runtime.multipleMu.halfLocal.conf.cpu.csv  runtime.multipleMu.halfLocal.conf.gpu.csv  runtime.multipleMu.local.conf.cpu.csv  runtime.multipleMu.local.conf.gpu.csv  runtime.multipleMu.noLocal.conf.cpu.csv  runtime.multipleMu.noLocal.conf.gpu.csv  runtime.multipleMu.superFine.conf.cpu.csv  runtime.multipleMu.superFine.conf.gpu.csv  runtime.prefixSum.cpu.csv  runtime.prefixSum.cpu2.csv  runtime.prefixSum.gpu.csv  runtime.prefixSum.gpu2.csv
plotting/scripts/: Event_pb2.py  data_transfer.py  latexHeader.py  physics_multipleMu.py  physics_qcd.py  physics_ttbar.py  plotAll.py  plot_heatmap.py  runtime_buildGrid.py  runtime_events.py  runtime_multipleMu.py  runtime_pairGen.py  runtime_prefixSum.py  runtime_tracks.py  runtime_tripletFilter.py  runtime_tripletPredict.py  runtime_workGroupSize.py
src/: CMakeLists.txt  CMake_CompilerDefaults.txt
src/algorithms/: AlmostBruteForceTracklets.h  BoundarySelection.h  BoundarySelectionPhi.h  BoundarySelectionZ.h  CMakeLists.txt  DummyTracklets.h  GridBuilder.cpp  GridBuilder.h  HitSorter.h  HitSorterPhi.h  HitSorterZ.h  PairGeneratorBeamspot.cpp  PairGeneratorBeamspot.h  PairGeneratorSector.cpp  PairGeneratorSector.h  PrefixSum.cpp  PrefixSum.h  Seed.cpp  Seed.h  TripletConnectivity.cpp  TripletConnectivity.h  TripletThetaPhiConstrainedPredictor.cpp  TripletThetaPhiConstrainedPredictor.h  TripletThetaPhiFilter.cpp  TripletThetaPhiFilter.h  TripletThetaPhiPredictor.cpp  TripletThetaPhiPredictor.h
src/algorithms/test/: AlgorithmsTests.h  AlmostBruteForceTrackletsTest.h  DummyTrackletsTest.h  TripletConnectivityTest.h
src/datastructures/: CMakeLists.txt  CommonTypes.h  DetectorGeometry.cpp  DetectorGeometry.h  Dictionary.h  EventSupplement.cpp  EventSupplement.h  GeometrySupplement.h  Grid.h  Hit.h  HitCollection.cpp  HitCollection.h  KernelWrapper.cpp  KernelWrapper.h  KernelWrapper.hpp  LayerSupplement.cpp  LayerSupplement.h  LayerTriplets.cpp  LayerTriplets.h  Logger.cpp  Logger.h  Pairings.h  TrackletCollection.h  TripletConfiguration.cpp  TripletConfiguration.h
src/datastructures/serialize/: Event.pb.cc  Event.pb.h  Event.proto  PEventStore.h
src/datastructures/serialize/test/: EventSerializeTest.h  GenericStoreTest.h
src/datastructures/test/: DatastructuresTests.h  HitCollectionData.h  HitCollectionTest.h  TrackletCollectionTest.h
src/trax_cms/: CMakeLists.txt  EventProcessor.cpp  EventProcessor.h  HitCollection_stripdown.cpp  trax_cms.cpp
src/trax_test/: CMakeLists.txt  trax_test.cpp  trax_test.evtStore.cpp  trax_test.prefix.cpp
src/triplet_builder/: CMakeLists.txt  EventLoader.h  LayerTripletConfiguration.xsd  Parameters.cpp  Parameters.h  PhysicsRecord.cpp  PhysicsRecord.h  RuntimeRecord.cpp  RuntimeRecord.h  TripletBuilder.cpp  evtStoreToContainer.cpp  utils.h
src/triplet_builder/lib/: CSV.h  ccolor.cpp  ccolor.h
